@@ -20,6 +20,8 @@
 #  USA
 
 
+import warnings
+warnings.filterwarnings("ignore", "apt API not stable yet", FutureWarning)
 import apt
 import apt_pkg
 import sys
