@@ -1,6 +1,5 @@
-The Ubuntu team is proud to announce a test version of Ubuntu 6.06 LTS.
-
-* THIS IS A DEVELOPMENT SNAPSHOT *
+The Ubuntu team is proud to announce a Release Candidate of 
+Ubuntu 6.06 LTS.
 
 Ubuntu is a Linux distribution for your desktop or server, with a 
 fast and easy install, regular releases, a tight selection of 
